--- a/tex/2014/3/8.tex
+++ b/tex/2014/3/8.tex
@@ -47,7 +47,7 @@ Notice that there are \((k^{n + 1} - 1) - k^n + 1 = k^{n + 1} - k^n = k^n (k - 1
 
           Let \(f(i)\) be the \(i\)-th integer not having \(2\) in the decimal expansion in increasing order, and hence
           \[
-              S(n) = \{f(i) | i \in \NN, f(i) < n\},
+              S(n) = \{f(i) \mid i \in \NN, f(i) < n\},
           \]
           and
           \[
