--- a/tex/2012/3/12.tex
+++ b/tex/2012/3/12.tex
@@ -1,2 +1,133 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item Let \([S]\) denote the area (2-D case) or the volume (3-D case) of \(S\).
+
+          Let \(l = AB = BC = CA\), and hence we have
+          \[
+              [\Delta ABC] = \frac{l \cdot 1}{2} = \frac{l}{2}.
+          \]
+
+          By trigonometry, we also have
+          \[
+              [\Delta ABC] = \frac{l^2 \sin \frac{\pi}{3}}{2} = \frac{\sqrt{3}}{4} l^2,
+          \]
+          and hence
+          \[
+              \frac{\sqrt{3}}{4} l^2 = \frac{l}{2} \iff l = \frac{2}{\sqrt{3}}.
+          \]
+
+          On the other hand, splitting up the triangle, we have
+          \begin{align*}
+              [\Delta ABC] & = [\Delta ABP] + [\Delta BCP] + [\Delta ACP]                               \\
+                           & = \frac{AB \cdot x_1}{2} + \frac{BC \cdot x_2}{2} + \frac{AC \cdot x_3}{2} \\
+                           & = \frac{l}{2} \left(x_1 + x_2 + x_3\right).
+          \end{align*}
+
+          Since \([\Delta ABC] = [\Delta ABC]\), we must have \(x_1 + x_2 + x_3 = 1\).
+
+          Let the angle bisectors of \(\angle BAC, \angle ABC\) and \(\angle ACB\) meet at a point \(O\) (this point exists since triangle \(ABC\) is equilateral).
+
+          For \(X_1 = \min(X_1, X_2, X_3)\), this happens if and only if \(P\) is closer to \(AB\) than \(BC\) (including the equal case, \(X_1 \leq X_2\)), and \(P\) is closer to \(AB\) than \(AC\) (including the equal case, \(X_1 \leq X_3\)). This means \(P\) must lie on the side containing point \(A\) relative to \(BO\) (inclusive), and on the side containing point \(B\) relative to \(AO\) (inclusive).
+
+          Hence, \(P\) must lie on or inside triangle \(AOB\), as shown in the diagram below.
+
+          Without loss of generality (since a triangle has order-\(3\) rotational symmetry, and the centre of symmetry is \(O\)), we only consider the case where
+          \[
+              X = X_1 = \min(X_1, X_2, X_3).
+          \]
+
+          This means \(P\) must lie on or inside triangle \(AOB\). Consider the cumulative distribution function of \(X_1\) under this condition. By the following diagram, for \(0 \leq x \leq \frac{1}{3}\), we must have
+          \begin{align*}
+              F(x) & = \Prob(X \leq x)                                                                                         \\
+                   & \propto [\Delta ABO] - [\Delta ARQ]                                                                       \\
+                   & = \frac{l \cdot \frac{1}{3}}{2} \cdot \left[1 - \left(\frac{\frac{1}{3} - x}{\frac{1}{3}}\right)^2\right] \\
+                   & = \frac{\frac{2}{\sqrt{3}} \cdot \frac{1}{3}}{2} \cdot \left[1 - \left(1 - 3x\right)^2\right]             \\
+                   & = \frac{1}{3\sqrt{3}} \cdot \left[6x - 9x^2\right]                                                        \\
+                   & = \frac{2x - 3x^2}{\sqrt{3}}.
+          \end{align*}
+
+          The maximum of \(x\) is \(\frac{1}{3}\), and hence \(F\left(\frac{1}{3}\right) = 1\). This means the constant of proportionality, \(k\), must satisfy
+          \[
+              k = \frac{F\left(\frac{1}{3}\right)}{\SqEvalAt{\frac{2x - 3x^2}{\sqrt{3}}}{x = \frac{1}{3}}} = \frac{1}{\frac{1}{3\sqrt{3}}} = 3\sqrt{3},
+          \]
+          and hence
+          \[
+              F(x) = 3(2x - 3x^2).
+          \]
+
+          Therefore, the probability density function of \(X\) for \(0 \leq x \leq \frac{1}{3}\) must satisfy
+          \[
+              f(x) = 6 - 18x = 6(1 - 3x),
+          \]
+          and \(0\) everywhere else, i.e.
+          \[
+              f(x) = \begin{cases}
+                  6(1 - 3x), & 0 \leq x \leq \frac{1}{3}, \\
+                  0,         & \text{otherwise}.
+              \end{cases}
+          \]
+
+          Hence, the expectation of \(X\) satisfies
+          \begin{align*}
+              \Expt(X) & = \int_{\RR} x f(x) \Diff x                                               \\
+                       & = \int_{0}^{\frac{1}{3}} (6x - 18x^2) \Diff x                             \\
+                       & = \left[3x^2 - 6x^3\right]_{0}^{\frac{1}{3}}                              \\
+                       & = 3 \cdot \left(\frac{1}{3}\right)^2 - 6 \cdot \left(\frac{1}{3}\right)^3 \\
+                       & = \frac{3}{9} - \frac{2}{9}                                               \\
+                       & = \frac{1}{9}.
+          \end{align*}
+
+    \item Let the regular tetrahedron be \(ABCD\) and the centroid be \(O\). Let \(AB = BC = BD = DA = l\). By trigonometry, we have
+          \[
+              \frac{l^3}{6\sqrt{2}} = \frac{1}{3} \cdot \frac{\sqrt{3} l^2}{4} \cdot 1,
+          \]
+          and hence
+          \[
+              l = \frac{\sqrt{3}}{\sqrt{2}}.
+          \]
+
+
+          Let the perpendicular distances from \(P\) to the face \(BCD, ACD, ABD\) and \(ABC\) be \(Y_1, Y_2, Y_3\) and \(Y_4\) respectively, and let
+          \[
+              Y = \min(Y_1, Y_2, Y_3, Y_4).
+          \]
+
+          By similar arguments as before, \(Y_1 = \min(Y_1, Y_2, Y_3, Y_4)\) if and only if \(P\) is on or inside the tetrahedron \(BCDO\).
+
+          Let \(G\) be the cumulative distribution function of \(Y_1\) under this condition. For \(0 \leq y \leq \frac{1}{4}\), we have
+          \begin{align*}
+              G(y) & = \Prob(Y \leq y)                                                                                         \\
+                   & \propto [BCDO] \cdot \left[1 - \left(\frac{\frac{1}{4} - y}{\frac{1}{4}}\right)^3\right]                  \\
+                   & = \frac{1}{3} \cdot \frac{\sqrt{3} l^2}{4} \cdot \frac{1}{4} \cdot \left[1 - \left(1 - 4y\right)^3\right] \\
+                   & = \frac{1}{16\sqrt{3}}  \cdot \frac{3}{2} \cdot \left[12y - 48y^2 + 64y^3\right]                          \\
+                   & = \frac{\sqrt{3}}{32} \cdot \left[12y - 48y^2 + 64y^3\right]                                              \\
+                   & = \frac{\sqrt{3} \left(3y - 12y^2 + 16y^3\right)}{8}.
+          \end{align*}
+
+          Since the maximum of \(y\) is \(\frac{1}{4}\), we must have \(G\left(\frac{1}{4}\right) = 1\), and hence the constant of proportionality, \(k\), must satisfy
+          \[
+              k = \frac{G\left(\frac{1}{4}\right)}{\SqEvalAt{\frac{\sqrt{3} \left(3y - 12y^2 + 16y^3\right)}{8}}{y = \frac{1}{4}}} = \frac{1}{\frac{\sqrt{3}}{32}} = \frac{32}{\sqrt{3}}.
+          \]
+
+          Hence,
+          \[
+              G(y) = 4 \left(3y - 12y^2 + 16y^3\right),
+          \]
+          and the probability density function of \(Y\) must satisfy for \(0 \leq y \leq \frac{1}{4}\)
+          \[
+              g(y) = 4 \left(3 - 24y + 48y^2 \right) = 12 \left(1 - 8y + 16y^2\right).
+          \]
+
+          Hence,
+          \begin{align*}
+              \Expt(y) & = \int_{\RR} y g(y) \Diff y                                                                                      \\
+                       & = \int_{0}^{\frac{1}{4}} 12 \left(y - 8y^2 + 16y^3\right) \Diff y                                                \\
+                       & = \left[6y^2 - 32y^3 + 48y^4\right]_{0}^{\frac{1}{4}}                                                            \\
+                       & = 6 \cdot \left(\frac{1}{4}\right)^2 - 32 \cdot \left(\frac{1}{4}\right)^3 + 48 \cdot \left(\frac{1}{4}\right)^4 \\
+                       & = \frac{3}{8} - \frac{1}{2} + \frac{3}{16}                                                                       \\
+                       & = \frac{3 \cdot 2 - 1 \cdot 8 + 3}{16}                                                                           \\
+                       & = \frac{1}{16}.
+          \end{align*}
+
+\end{enumerate}
