--- a/tex/2012/3/5.tex
+++ b/tex/2012/3/5.tex
@@ -1,2 +1,84 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item \begin{enumerate}
+              \item An integer point: \((0, 1)\). A non-integer point: \(\left(\frac{3}{5}, \frac{4}{5}\right)\).
+              \item An integer rational point: \((1, 1)\). Notice that
+                    \begin{align*}
+                         & \phantom{=} (\cos \theta + \sqrt{m} \sin \theta)^2 + (\sin \theta - \sqrt{m} \cos \theta)^2                                   \\
+                         & = \cos^2\theta + 2\sqrt{m} \sin\theta\cos\theta + m\sin^2\theta + \sin^2\theta -2\sqrt{m}\sin\theta\cos\theta + m\cos^2\theta \\
+                         & = (m + 1) (\sin^2\theta + \cos^2\theta)                                                                                       \\
+                         & = m + 1.
+                    \end{align*}
+
+                    Consider letting \(x = \cos \theta + \sqrt{m} \sin \theta\), and \(y = \sin \theta - \sqrt{m} \cos \theta\). Let \(m = 1\), and we have \(x = \cos \theta + \sin \theta\) and \(y = \sin \theta - \cos \theta\), with \(x^2 + y^2 = m + 1 = 2\).
+
+                    Let \(\cos \theta = \frac{3}{5}\), and \(\sin \theta = \frac{4}{5}\). We have
+                    \[
+                        (x, y) = \left(\frac{7}{5}, \frac{1}{5}\right)
+                    \]
+                    is a non-integer rational point.
+          \end{enumerate}
+
+    \item \begin{enumerate}
+              \item An integer \(2\)-rational point: \((1, \sqrt{2})\).
+
+                    For the non-integer \(2\)-rational point, let \(m = \sqrt{2}\) in the previous question, and we have
+                    \[
+                        (\cos \theta + \sqrt{2} \sin \theta)^2 + (\sin \theta - \sqrt{2} \cos \theta)^2 = 2 + 1 = 3.
+                    \]
+
+                    Now, let \(\cos \theta = \frac{3}{5}\) and \(\sin \theta = \frac{4}{5}\). Let \(x = \cos \theta + \sqrt{2} \sin \theta = \frac{3}{5} + \sqrt{2} \cdot \frac{4}{5}\) and \(y = \sin \theta - \sqrt{2} \cos \theta = \frac{4}{5} - \sqrt{2} \cdot \frac{3}{5}\). We must have \(x^2 + y^2 = 3\), and
+                    \[
+                        (x, y) = \left(\frac{3}{5} + \sqrt{2} \cdot \frac{4}{5}, \frac{4}{5} - \sqrt{2} \cdot \frac{3}{5}\right)
+                    \]
+                    is a non-integer \(2\)-rational point on \(x^2 + y^2 = 3\).
+
+              \item Consider \(x = a \cos \theta + b \sqrt{m} \sin \theta\) and \(y = a \sin \theta - b \sqrt{m} \cos \theta\), we have
+                    \begin{align*}
+                        x^2 + y^2 & = \left(a \cos \theta + b \sqrt{m} \sin \theta\right)^2 + \left(a \sin \theta - b \sqrt{m} \cos \theta\right)^2 \\
+                                  & = a^2 \cos^2\theta + b^2 m \sin^2\theta + 2ab\sqrt{m} \sin\theta \cos\theta                                     \\
+                                  & \phantom{=} + a^2 \sin^2\theta + b^2 m \cos^2\theta - 2ab\sqrt{m} \sin\theta \cos\theta                         \\
+                                  & = (a^2 + b^2 m) \cos^2\theta + (a^2 + b^2 m) \sin^2\theta                                                       \\
+                                  & = (a^2 + b^2 m) (\sin^2\theta + \cos^2\theta)                                                                   \\
+                                  & = a^2 + b^2 m.
+                    \end{align*}
+
+                    We set \(m = 2\), and hence we would like \(a^2 + 2 b^2 = 11\). Consider \(a = 3\) and \(b = 1\), and set \(\cos \theta = \frac{4}{5}\) and \(\sin \theta = \frac{3}{5}\). Hence,
+                    \[
+                        x = a \cos \theta + b \sqrt{m} \sin \theta = 3 \cdot \frac{4}{5} + 1 \cdot \sqrt{2} \cdot \frac{3}{5} = \frac{12}{5} + \sqrt{2} \cdot \frac{3}{5},
+                    \]
+                    and
+                    \[
+                        y = a \sin \theta - b \sqrt{m} \cos \theta = 3 \cdot \frac{3}{5} - 1 \cdot \sqrt{2} \cdot \frac{4}{5} = \frac{9}{5} - \sqrt{2} \cdot \frac{4}{5},
+                    \]
+                    and we must have \(x^2 + y^2 = 3^2 + 1^2 \cdot 2 = 11\). Therefore,
+                    \[
+                        (x, y) = \left(\frac{12}{5} + \sqrt{2} \cdot \frac{3}{5}, \frac{9}{5} - \sqrt{2} \cdot \frac{4}{5}\right)
+                    \]
+                    is a non-integer \(2\)-rational point on the circle \(x^2 + y^2 = 11\).
+
+              \item Consider \(x = a \sec \theta + b \sqrt{m} \tan \theta\) and \(y = a \tan \theta + b \sqrt{m} \sec \theta\), we have
+                    \begin{align*}
+                        x^2 - y^2 & = \left(a \sec \theta + b \sqrt{m} \tan \theta\right)^2 - \left(a \tan \theta + b \sqrt{m} \sec \theta\right)^2 \\
+                                  & = a^2 \sec^2 \theta + b^2 m \tan^2\theta + 2ab\sqrt{m} \sec \theta \tan \theta                                  \\
+                                  & \phantom{=} - a^2 \tan^2\theta - b^2 m \sec^2\theta - 2ab\sqrt{m} \sec \theta \tan \theta                       \\
+                                  & = a^2 (\sec^2 \theta - \tan^2 \theta) - b^2 m (\sec^2 \theta - \tan^2 \theta)                                   \\
+                                  & = a^2 - b^2 m.
+                    \end{align*}
+
+                    We set \(m = 2\), and hence we would like \(a^2 - 2 b^2 = 7\). Consider \(a = 3\) and \(b = 1\), and set \(\tan \theta = \frac{3}{4}\) and \(\sec \theta = \frac{5}{4}\). Hence,
+                    \[
+                        x = a \sec \theta + b \sqrt{m} \tan \theta = 3 \cdot \frac{5}{4} + 1 \cdot \sqrt{2} \cdot \frac{3}{4} = \frac{15}{4} + \sqrt{2} \cdot \frac{3}{4},
+                    \]
+                    and
+                    \[
+                        y = a \tan \theta + b \sqrt{m} \sec \theta = 3 \cdot \frac{3}{4} + 1 \cdot \sqrt{2} \cdot \frac{5}{4} = \frac{9}{4} + \sqrt{2} \cdot \frac{5}{4},
+                    \]
+                    and we must have \(x^2 - y^2 = 3^2 - 1^2 \cdot 2 = 7\). Therefore,
+                    \[
+                        (x, y) = \left(\frac{15}{4} + \sqrt{2} \cdot \frac{3}{4}, \frac{9}{4} + \sqrt{2} \cdot \frac{5}{4}\right)
+                    \]
+                    is a non-integer \(2\)-rational point on the hyperbola \(x^2 - y^2 = 7\).
+          \end{enumerate}
+\end{enumerate}
