--- a/tex/2011/3/1.tex
+++ b/tex/2011/3/1.tex
@@ -1,2 +1,59 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item By rearrangement, we have
+          \[
+              \frac{\Diff u}{u} = \left(1 + \frac{1}{x + 1}\right) \Diff x,
+          \]
+          and hence by integration,
+          \[
+              \ln |u| = x + \ln|x + 1| + C.
+          \]
+
+          This gives
+          \[
+              u = C (x + 1) e^x
+          \]
+          as the general solution.
+
+    \item Since \(y = z e^{-x}\), we must have
+          \[
+              \DiffFrac{y}{x} = \DiffFrac{z}{x} e^{-x} - z e^{-x} = \left(\DiffFrac{z}{x} - z\right) e^{-x},
+          \]
+          and
+          \[
+              \NdiffFrac{2}{y}{x} = \NdiffFrac{2}{z}{x} e^{-x} - 2 \DiffFrac{z}{x} e^{-x} + z e^{-x} = \left(\NdiffFrac{2}{z}{x} - 2 \DiffFrac{z}{x} + z\right) e^{-x}.
+          \]
+
+          Hence, the original differential equation can be simplified:
+          \begin{align*}
+              (x + 1) \NdiffFrac{2}{y}{x} + x \DiffFrac{y}{x} - y                                                                            & = 0  \\
+              (x + 1) \left(\NdiffFrac{2}{z}{x} - 2 \DiffFrac{z}{x} + z\right) e^{-x} + x \left(\DiffFrac{z}{x} - z\right) e^{-x} - z e^{-x} & = 0  \\
+              (x + 1) \left(\NdiffFrac{2}{z}{x} - 2 \DiffFrac{z}{x} + z\right) + x \left(\DiffFrac{z}{x} - z\right) - z                      & = 0  \\
+              (x + 1) \NdiffFrac{2}{z}{x} - (x + 2)\DiffFrac{z}{x}                                                                           & = 0,
+          \end{align*}
+          which is a first-order differential equation for \(\DiffFrac{z}{x}\).
+
+          Hence, from part (i), we have the general solution to this differential equation is
+          \[
+              \DiffFrac{z}{x} = C(x + 1)e^x,
+          \]
+          and hence by integration
+          \[
+              z = C \int (x + 1) e^x \Diff x = C \left[\int x \Diff e^x + \int e^x \Diff x\right] = C [xe^x - e^x + e^x] + D.
+          \]
+
+          Therefore, \(y = z e^{-x} = De^{-x} + Cx\). Let \(A = C\) and \(B = D\) and this is exactly what is desired.
+
+    \item The complementary function is the differential equation solved in the previous part. For the complementary function, consider \(y = ax^2 + b\), and hence \(\DiffFrac{y}{x} = 2ax\) and \(\NdiffFrac{2}{y}{x} = 2a\). Hence,
+          \[
+              2a(x + 1) + x \cdot 2ax - ax^2 - c = ax^2 + 2ax + (2a - c) = x^2 + 2x + 1.
+          \]
+
+          Hence, \(a = 1\) and \(c = 1\) giving \(y = x^2 + 1\) is a particular integral.
+
+          Therefore, the general solution to the differential equation is
+          \[
+              y = Ax + Be^{-x} + x^2 + 1.
+          \]
+\end{enumerate}
