--- a/tex/2011/3/8.tex
+++ b/tex/2011/3/8.tex
@@ -1,2 +1,70 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+Since \(w = u + iv\), \(z = x + iy\), we have
+\begin{align*}
+    u + iv & = w                                                                                                         \\
+           & = \frac{1 + iz}{i + z}                                                                                      \\
+           & = \frac{1 + i(x + iy)}{i + (x + iy)}                                                                        \\
+           & = \frac{(1 - y) + xi}{x + (y + 1)i}                                                                         \\
+           & = \frac{(1 - y) + xi}{x + (y + 1)i} \cdot \frac{x - (y + 1)i}{x - (y + 1)i}                                 \\
+           & = \frac{\left[(1 - y) + xi\right] \left[x - (y + 1)i\right]}{x^2 + (y + 1)^2}                               \\
+           & = \frac{(1 - y)x + x(y + 1)}{x^2 + (y + 1)^2} + \frac{x^2 - (1 - y) \cdot (y + 1)}{x^2 + (y + 1)^2} \cdot i \\
+           & = \frac{2x}{x^2 + (y + 1)^2} + \frac{x^2 + y^2 - 1}{x^2 + (y + 1)^2} \cdot i,
+\end{align*}
+and hence
+\[
+    (u, v) = \left(\frac{2x}{x^2 + (y + 1)^2}, \frac{x^2 + y^2 - 1}{x^2 + (y + 1)^2}\right).
+\]
+
+\begin{enumerate}
+    \item When \(y = 0\), we have
+          \[
+              (u, v) = \left(\frac{2x}{x^2 + 1}, \frac{x^2 - 1}{x^2 + 1}\right).
+          \]
+
+          Let \(x = \tan \left(\frac{\theta}{2}\right)\). The tangent half-angle substitution also gives that \(u = \sin \theta\) and \(v = -\cos \theta\), and hence \(u^2 + v^2 = 1\).
+
+          For the range of \(\theta\), we have \(-\frac{\pi}{2} < \frac{\theta}{2} < \frac{\pi}{2}\), which means \(-\pi < \theta < \pi\).
+
+          This represents the unit circle without the point \((\sin \pi, - \cos \pi) = (0, 1)\) corresponding to \(\theta = \pi ( + 2k\pi)\) for some integer \(k\).
+
+    \item When \(-1 < x < 1\), we have \(-\frac{\pi}{4} < \frac{\theta}{2} < \frac{\pi}{4}\), which means \(-\frac{\pi}{2} < \theta < \frac{\pi}{2}\). This is the unit circle with only the part below the \(u\) axis (exclusive).
+
+    \item When \(x = 0\), we have
+          \[
+              (u, v) = \left(0, \frac{y^2 - 1}{(y + 1)^2}\right).
+          \]
+
+          Notice that
+          \[
+              v = \frac{y^2 - 1}{(y + 1)^2} = \frac{(y + 1)(y - 1)}{(y + 1)^2} = \frac{y - 1}{y + 1} = 1 - \frac{2}{y + 1},
+          \]
+          and hence \(-1 < v < 1\).
+
+          This means the locus of \(w\) is the line segment \(u = 0, -1 < v < 1\).
+
+    \item When \(y = 1\), we have
+          \[
+              (u, v) = \left(\frac{2x}{x^2 + 4}, \frac{x^2}{x^2 + 4}\right).
+          \]
+
+          First, let \(x = 2t\), and we have
+          \[
+              (u, v) = \left(\frac{4t}{4t^2 + 4}, \frac{4t^2}{4t^2 + 4}\right) = \left(\frac{t}{t^2 + 1}, \frac{t^2}{t^2 + 1}\right).
+          \]
+
+          Let \(t = \tan \left(\frac{\theta}{2}\right)\), and we have \(-\pi < \theta < \pi\). Notice that
+          \[
+              u = \frac{1}{2} \cdot \frac{2t}{t^2 + 1} = \frac{1}{2} \sin \theta,
+          \]
+          and
+          \[
+              v - \frac{1}{2} = \frac{1}{2} \cdot \frac{t^2 - 1}{t^2 + 1} = - \frac{1}{2} \cos \theta.
+          \]
+
+          This means the loci is a subset of the circle centred at \(\left(0, \frac{1}{2}\right)\) with radius \(\frac{1}{2}\), with the point
+          \[
+              (u, v) = \left(\frac{1}{2} \sin \pi, \frac{1}{2} - \frac{1}{2} \cos \pi\right) = (0, 1)
+          \]
+          missing, which corresponds to \(\theta = \pi (+ 2k\pi)\) for some integer \(k\).
+\end{enumerate}
