--- a/tex/2011/3/6.tex
+++ b/tex/2011/3/6.tex
@@ -1,2 +1,44 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+We show that \(T\) is equal to each of \(U, V, X\), and by transitivity, this shows that all four are equal.
+
+\begin{itemize}
+    \item To show \(T = U\), consider the substitution \(u = 2 \artanh t\), and hence \(t = \tanh \frac{u}{2}\).
+
+          When \(t = \frac{1}{2}\), \(u = 2 \artanh \frac{1}{2} = 2 \cdot \frac{1}{2} \cdot \ln \left(\frac{1 + \frac{1}{2}}{1 - \frac{1}{2}}\right) = \ln 3\), and when \(t = \frac{1}{3}\), \(u = 2 \artanh \frac{1}{3} = 2 \cdot \frac{1}{2} \cdot \ln \left(\frac{1 + \frac{1}{3}}{1 - \frac{1}{3}}\right) = \ln 2\).
+
+          We have \(\Diff u = \frac{2}{1 - t^2} \Diff t\), and hence
+          \begin{align*}
+              T & = \int_{\frac{1}{3}}^{\frac{1}{2}} \frac{\artanh t}{t} \Diff t                                               \\
+                & = \int_{\ln 2}^{\ln 3} \frac{\frac{u}{2}}{\tanh \frac{u}{2}} \cdot \frac{1 - \tanh^2 \frac{u}{2}}{2} \Diff u \\
+                & = \int_{\ln 2}^{\ln 3} \frac{u}{2} \cdot \frac{1 - \tanh^2 \frac{u}{2}}{2 \tanh \frac{u}{2}} \Diff u         \\
+                & = \int_{\ln 2}^{\ln 3} \frac{u}{2 \sinh u} \Diff u                                                           \\
+                & = U.
+          \end{align*}
+
+    \item To show \(T = V\), we use integration by parts.
+          \begin{align*}
+              T & = \int_{\frac{1}{3}}^{\frac{1}{2}} \frac{\artanh t}{t} \Diff t                                                                                                                                            \\
+                & = \int_{\frac{1}{3}}^{\frac{1}{2}} \artanh t \Diff \ln t                                                                                                                                                  \\
+                & = \left[\artanh t \ln t\right]_{\frac{1}{3}}^{\frac{1}{2}} - \int_{\frac{1}{3}}^{\frac{1}{2}} \ln t \Diff \artanh t                                                                                       \\
+                & = \left(\artanh \frac{1}{2} \ln \frac{1}{2} - \artanh \frac{1}{3} \ln \frac{1}{3}\right) - \int_{\frac{1}{3}}^{\frac{1}{2}} \frac{\ln t}{1 - t^2} \Diff t                                                 \\
+                & = \left(\frac{1}{2} \cdot \ln \left(\frac{1 + \frac{1}{2}}{1 - \frac{1}{2}}\right) \cdot (- \ln 2) - \frac{1}{2} \cdot \ln \left(\frac{1 + \frac{1}{3}}{1 - \frac{1}{3}}\right) \cdot (-\ln 3)\right) + V \\
+                & = \left(- \frac{1}{2} \cdot \ln 3 \cdot \ln 2 + \frac{1}{2} \cdot \ln 2 \cdot \ln 3\right) + V                                                                                                            \\
+                & = V.
+          \end{align*}
+
+    \item To show \(T = X\), consider the substitution \(x = - \frac{1}{2} \ln t\), and hence \(t = e^{-2x}\).
+
+          When \(t = \frac{1}{2}\), \(x = - \frac{1}{2} \ln \frac{1}{2} = \frac{1}{2} \ln 2\), and when \(t = \frac{1}{3}\), \(x = - \frac{1}{2} \ln \frac{1}{3} = \frac{1}{2} \ln 3\).
+
+          We have \(\Diff x = - \frac{\Diff t}{2t}\), and hence
+          \begin{align*}
+              T & = \int_{\frac{1}{3}}^{\frac{1}{2}} \frac{\artanh t}{t} \Diff t                                                \\
+                & = \int_{\frac{1}{2} \ln 3}^{\frac{1}{2} \ln 2} \frac{\artanh e^{-2x}}{t} \cdot (-2t) \Diff x                  \\
+                & = \int_{\frac{1}{2} \ln 2}^{\frac{1}{2} \ln 3} 2 \artanh e^{-2x} \Diff x                                      \\
+                & = \int_{\frac{1}{2} \ln 2}^{\frac{1}{2} \ln 3} \ln \left(\frac{1 + e^{-2x}}{1 - e^{-2x}}\right) \Diff x       \\
+                & = \int_{\frac{1}{2} \ln 2}^{\frac{1}{2} \ln 3} \ln \left(\frac{e^{x} + e^{-x}}{e^{x} - e^{-x}}\right) \Diff x \\
+                & = \int_{\frac{1}{2} \ln 2}^{\frac{1}{2} \ln 3} \ln \coth x \Diff x                                            \\
+                & = X.
+          \end{align*}
+\end{itemize}
