this has been a very stupid mistake.

--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -91,7 +91,7 @@
 % Paired Delimiters
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 \DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
-\DeclarePairedDelimiter{\abs*}{\lvert}{\rvert}
+\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 
 % Other Math Symbols
 \DeclareMathOperator{\modulo}{mod}
